--- a/watch-together/package.json
+++ b/watch-together/package.json
@@ -13,11 +13,12 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "firebase": "^10.12.5",
+    "firebase": "^10.13.1",
     "lucide-react": "^0.424.0",
     "postcss": "^8.4.40",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.7",
